# HFTMBigDataAnalytics

./: main.py  pyproject.toml  requirements.txt  shell.nix  streamlit_app.py
app/: charts.py  i18n.py  pages.py
