[project]
name = "hftmbigdataanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker>=1.9.0",
    "daspi>=1.10.1",
    "graphviz>=0.21",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "streamlit>=1.57.0",
]
